Add header and image

--- a/mogo/index.html
+++ b/mogo/index.html
@@ -5,13 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap"
+        rel="stylesheet">
     <title>MOGO</title>
     <!-- External CSS File -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <h1>MOGO</h1>
 
+        </div>
+
+    </header><!-- end of header-->
     <script src="js/main.js"></script>
 </body>
 
