--- a/mogo/index.html
+++ b/mogo/index.html
@@ -16,7 +16,15 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1>MOGO</h1>
+
+            <div class="logo">MoGo</div>
+            <nav>
+                <a href="#">About</a>
+                <a href="#">Service</a>
+                <a href="#">Blog</a>
+                <a href="#">Work</a>
+                <a href="#">Contact</a>
+            </nav>
 
         </div>
 
