fixed tank.js file

--- a/militaryGEOsite/index.html
+++ b/militaryGEOsite/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">Infosite</a>
+        <a href="#" class="navbar-brand">Global military Infosite</a>
     </nav>
 
     <!-- Mid section -->
@@ -23,8 +23,8 @@
         <div class="row mt-5">
             <div class="col-lg-12">
                 <button type="button" class="btn btn-success" data="ship">Ship</button>
-                <button type="button" class="btn btn-success" data="aircraft">Aircraft</button>
-                <button type="button" class="btn btn-success" data="tank">Tank</button>
+                <button type="button" class="btn btn-success" data="aircraft">Aircrafts</button>
+                <button type="button" class="btn btn-success" data="tank">Tanks</button>
             </div>
             <div class="col-lg-12">
                 <div id="regions_div" style="width: 100%; min-height: 300px;"></div>
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <a href="#" class="navbar-brand">Infosite</a>
+                        <a href="#" class="navbar-brand">Global military Infosite</a>
                     </div>
                 </div>
             </div>
